# compas-analysis

./: .gitignore  README.md  REPORT.md  pyproject.toml  skills-lock.json
.claude/skills/: paperhound
app/: demo.py
data/processed/: test.csv  test_debiased.csv  train.csv  train_debiased.csv
models/: correlation_remover.joblib  lr_biased.joblib  lr_debiased.joblib  svm_biased.joblib  svm_debiased.joblib  tree_biased.joblib
paper/: README.md  main.tex
paper/sections/: cover.tex  preamble.tex
paper/user/: biblio.bib  content.tex  usercode.tex  userdata.tex
reports/: 02_eda.md  03_baseline.md  03_model_selection.md  04_baseline.md  04_debias.md  05_debias.md  05_debiased_model.md  06_debiased_model.md  06_xai.md  07_reflection.md  07_xai.md  08_literature_and_novelty.md  08_reflection.md  09_literature_and_novelty.md  related_work.bib
scripts/: 01_download_data.py  02_eda.py  03_baseline_model.py  03_model_selection.py  04_baseline_model.py  04_debias.py  05_debias.py  05_debiased_model.py  06_debiased_model.py  06_xai_comparison.py  07_xai_comparison.py  common.py
