[project]
name = "compas-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dice-ml>=0.12",
    "fairlearn>=0.14.0",
    "matplotlib>=3.11.1",
    "numba>=0.60",
    "numpy>=2.4.6",
    "pandas>=3.0.5",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.60.0",
]
